<resources>
    <string name="app_name">Qadmni</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_items">Search</string>
    <string name="your_cart">My Cart</string>
    <string name="cake_one">Chocolate</string>
    <string name="company_name_one"><![CDATA[By S & O Pvt Ltd.]]></string>
    <string name="review_one">(30 Reviews)</string>
    <string name="review_two">(80 Reviews)</string>
    <string name="review_three">(100 Reviews)</string>
    <string name="review_four">(50 Reviews)</string>
    <string name="sar">SAR</string>
    <string name="price">320</string>

    <string name="salad_name_first">Waldorf Salad</string>
    <string name="salad_name_second">Urnebes Salad</string>
    <string name="salad_review">112 Reviews</string>
    <string name="salad_by">By</string>
    <string name="salad_distance">Km away</string>
    <string name="salad_time">mins</string>
    <string name="cake_two">Vanilla</string>
    <string name="cake_three">Lime </string>
    <string name="cake_four">Mango </string>
    <string name="ice_name_first">Caramel Swirl</string>
    <string name="ice_cream_two">Coconut Milk</string>
    <string name="salad_review_two">196 Reviews</string>

    <string name="str_language">Language</string>
    <string name="str_english">English</string>
    <string name="str_arabic">العربية</string>
    <string name="cake_one_star">4.2</string>
    <string name="str_cake_one_cmp">Sunrise Pies</string>
    <string name="str_cake_one_qty">4</string>
    <string name="cake_two_star">5</string>
    <string name="str_cake_two_cmp">The Dough Knot</string>
    <string name="cake_two_price">345</string>
    <string name="cake_three_star">3</string>
    <string name="str_cake_three_cmp">Sunrise Pies</string>
    <string name="str_cake_three_price">260</string>
    <string name="cake_four_star">4.5</string>
    <string name="str_cake_four_cmp">Bake n Flake</string>
    <string name="cake_four_price">550</string>
    <string name="offer_on_desert">50% OFF</string>
    <string name="str_dessert_one_cmp">The CinnaMan</string>
    <string name="str_one_km">32</string>
    <string name="str_mins_one_wait">25</string>
    <string name="str_dessert_two_cmp">Confection Connection</string>
    <string name="str_two_km">45</string>
    <string name="str_mins_two_wait">36</string>
    <string name="str_dessert_one_amt">452</string>
    <string name="str_dessert_two_amt">234</string>
    <string name="cakes">CAKES</string>
    <string name="desserts">DESSERT</string>
    <string name="biscut">BISCUIT</string>
    <string name="str_your_cart">Your Cart</string>
    <string name="str_edit">Edit</string>
    <string name="cart_one_qty">4 x</string>
    <string name="cart_one_item">Cheese Burger</string>
    <string name="cart_one_item_price">20</string>
    <string name="cart_two_item">Cola</string>
    <string name="cart_three_item">Curly Fries</string>
    <string name="cart_two_item_price">6</string>
    <string name="cart_three_item_price">16</string>
    <string name="add_more">Add more</string>
    <string name="cart_one_details">Service fee (0%)</string>
    <string name="cart_one_details_value">Free</string>
    <string name="cart_two_details">Container Charges</string>
    <string name="cart_three_details">Delivery Fee</string>
    <string name="cart_four_details">Subtotal</string>
    <string name="cart_details_item_price">3</string>
    <string name="cart_details_item_two_price">42</string>
    <string name="str_total">Total</string>
    <string name="btn_check_out">Proceed to checkout</string>
    <string name="cart_total_price">45</string>
    <string name="str_place">Riyadh, Riyadh Province, Saudi Arabia</string>
    <string name="str_place_second_line">2236 Kalid Ibn</string>
    <string name="str_delivery">DELIVERY</string>
    <string name="str_asap">ASAP</string>
    <string name="str_min">45 - 55 min</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_pick_time"><![CDATA[Pick a date & time]]></string>
    <string name="str_payment">PAYMENT</string>
    <string name="str_pay_opt">PAYPAL</string>
    <string name="place_order">Place Your Order</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="price_tv">SAR</string>
    <string name="price_sar">3244.87</string>
    <string name="str_cash">CASH</string>
    <string name="str_live_track">LIVE ORDERS</string>
    <string name="str_past_orders">PAST ORDERS</string>
    <string name="str_track_order">FROM</string>
    <string name="str_track_company_name">United Foods Pvt.ltd</string>
    <string name="str_order_date">Order Date</string>
    <string name="str_order_date_data">05-04-2017 20:23 PM</string>
    <string name="str_order_id">Order Id</string>
    <string name="str_order_id_data">2345622</string>
    <string name="str_order_placed">Order has been placed</string>
    <string name="str_order_track">TRACK ORDER</string>
    <string name="str_order_total">TOTAL</string>
    <string name="str_order_price">542356.45</string>
    <string name="str_order">ORDERS</string>
    <string name="str_previous_orders">VIEW DETAILS</string>
    <string name="str_previous_delivered">Order has been placed</string>
    <string name="str_previous_date_1">04-04-2016 10:23 PM</string>
    <string name="str_previous_1">245622</string>
    <string name="str_order_delivery_type">Delivery Type</string>
    <string name="str_order_payment_mode">Payment Mode</string>
    <string name="str_order_demo_delivery_type">Online-PAYPAL</string>
    <string name="str_order_demo_delivery_mode">Delivery</string>
    <string name="str_track_order_title">TRACK ORDERS</string>
    <string name="str_track_order_id">Order Id:</string>
    <string name="str_track_order_address">7835 Abi Hilal Askari,Al Mohammadiyah</string>
    <string name="str_track_order_address_1">Riyadh 12363 4258,Saudi Arabia</string>
    <string name="str_track_order_details">ORDER DETAILS</string>
    <string name="title_activity_my_favourites">MyFavouritesActivity</string>
    <string name="str_user_name_hint">User Name</string>
    <string name="str_user_password">Password</string>
    <string name="str_user_forgot_password">Cannot access your account?</string>
    <string name="str_login_btn">Login</string>
    <string name="str_create_acc">Create account</string>
    <string name="str_name_hint">Name</string>
    <string name="str_confirm_user_password">Confirm Password</string>
    <string name="str_email_hint">Email</string>
    <string name="str_ph_hint">Phone</string>
    <string name="str_subscribe_btn">Subscribe Now</string>
    <string name="str_shop_details">Shop details</string>
    <string name="str_shop_name_hint">Business Name</string>
    <string name="str_shop_location_hint">Business Location</string>
    <string name="lang_setting">Setting</string>
    <string name="str_new_quadmni">New to qadmni? </string>
    <string name="str_next">Next</string>
    <string name="str_payment_details">Pay SAR 200 per month</string>

    <string name="str_nearest_shop">Distance</string>
    <string name="raduis_selected">km.</string>
    <string name="str_price">Price</string>
    <string name="filter">Filter product</string>
    <string name="str_sort">SORT BY</string>
    <string name="str_review">Review</string>
    <string name="str_filter">FILTER BY</string>
    <string name="str_high">High</string>
    <string name="str_low">Low</string>
    <string name="str_nearer">Nearer</string>
    <string name="str_farther">Farther</string>
    <string name="btn_apply">APPLY</string>
    <string name="str_clear">CLEAR</string>
    <string name="str_vender_login">Vendor Login</string>
    <string name="str_quick_start">Quick Start</string>
    <string name="str_login">Login</string>
    <string name="str_start_quickly">Get started quickly</string>
    <string name="str_login_to_acc">Login to your account</string>
    <string name="str_btn_pay">PAY</string>
    <string name="str_my_cart">My Cart</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="title_activity_partner_main">PartnerMainActivity</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_fav_list">My Favourites</string>
    <string name="str_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="str_partner_login">Partner Login</string>
    <string name="str_logout">Logout</string>
    <string name="str_prduct_list">Product List</string>
    <string name="str_btn_save">Save</string>
    <string name="str_feed_back">Feedback</string>
    <string name="str_feed_back_imp">Your feedback is important to us</string>
    <string name="str_profile_save">Save Profile</string>
    <string name="str_customer_name">Simon Jones</string>
    <string name="str_first_name">First Name</string>
    <string name="str_customer_email">simon.jones@test.com</string>
    <string name="str_user_address"><![CDATA[3602 Al Farawi St, Al Murabba, Riyadh 12612 8214, Saudi Arabia]]></string>
    <string name="str_address">Address</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_shop_address">Shop Address</string>
    <string name="str_user_ph_no">879654356</string>
    <string name="str_write_something">Write something</string>
    <string name="str_renew_btn">Renew Now</string>
    <string name="str_renew_details">Your subscription is valid till</string>
    <string name="str_renew_date">29</string>
    <string name="my_subscription">My Subscriptions</string>
    <string name="str_provide_feedback">Provide Feedback</string>
    <string name="str_submit_btn">Submit</string>
    <string name="str_dessert_one_desc">One pancake is sufficient for 2-3 people</string>
    <string name="str_order_status">Order status</string>
    <string name="str_cooking">Cooking</string>
    <string name="str_on_the_way">On the way</string>
    <string name="str_dilivered">Delivered</string>
    <string name="str_customer_name_hint">Customer Name</string>
    <string name="str_credit_card">Credit card</string>
    <string name="str_home_delivery">Home delivery</string>
    <string name="str_customer_address">Customer Address</string>
    <string name="str_show_on_map">Show on Map</string>
    <string name="str_change_status">Change status</string>
    <string name="str_update_status">Update status</string>
    <string name="str_renew_date_month">July</string>
    <string name="str_renew_date_year">2017</string>
    <string name="str_add_new_product">Add New Product</string>
    <string name="str_details">Details</string>
    <string name="str_details_product">delicious ice cream made up of coconut and cream ...</string>
    <string name="str_avail_soon">Available for sell</string>
    <string name="str_update">UPDATE</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_welcome_to_qadmni">WelCome To Qadmni</string>
    <string name="str_register">Register</string>
    <string name="str_order_no">Order No</string>
    <string name="str_product1">Vanila</string>
    <string name="str_caremal">Caramel Swirl</string>
    <string name="str_coconut">Coconut Milk</string>
    <string name="str_mango">Mango Chocolate cake</string>
    <string name="str_tax">TAX</string>
    <string name="str_renew">Renew Subscription</string>
    <string name="str_forgot_msg">You will receive your credentials,if your email id matches with registered email id</string>
    <string name="str_btn_send_email">Click here to get your password</string>
    <string name="str_forgot_password">Forgot password</string>
    <string name="str_register_now">Register Now</string>
    <string name="str_select_language">Select Language</string>


</resources>
