<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".PartnerLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginTransparnt"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.groceryfood.views.Nunito
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="52sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:text="@string/str_user_name_hint"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/user_email_id_editText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/custom_white_border"
                    android:drawablePadding="10dp"
                    android:hint="@string/str_user_name_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:text="@string/str_user_password"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/user_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/custom_white_border"
                    android:drawablePadding="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/str_user_password"
                    android:inputType="textPassword"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/forgot_password_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:text="@string/str_user_forgot_password"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/login_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_white_border"
                        android:text="@string/str_login_btn"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/str_new_quadmni"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/create_account_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:gravity="end"
                        android:text="@string/str_create_acc"
                        android:textColor="#86f206"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
