<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/nearLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/imgGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:src="@drawable/ic_marker_24_black" />

        <TextView
            android:id="@+id/txtNearShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:text="@string/str_nearest_shop"
            android:textColor="@color/primaryText2"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/imgCocktails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:src="@drawable/ic_coins_24_black" />

        <TextView
            android:id="@+id/txtCocktails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:text="@string/str_price"
            android:textColor="@color/primaryText2"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hostLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/imgCures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:src="@drawable/ic_star_24_black" />

        <TextView
            android:id="@+id/txtCures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:text="@string/str_review"
            android:textColor="@color/primaryText2"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>